--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -7,3 +7,5 @@
 /Jumon_Command1940.class
 /Get_a_good_number1253.class
 /DNAPassword12891.class
+/Lowest_value11003.class
+/Lowest_value11003$Node.class
