--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -13,3 +13,7 @@
 /Stack_sequence1874.class
 /Large_numbers17298.class
 /CardGame2164.class
+/CardGame2164$1.class
+/Absolute_value_heap.class
+/Absolute_value_heap11286.class
+/Absolute_value_heap11286$1.class
