--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -17,3 +17,10 @@
 /Absolute_value_heap.class
 /Absolute_value_heap11286.class
 /Absolute_value_heap11286$1.class
+/Parenthesis_values$bracket.class
+/Parenthesis_values$brackets.class
+/Parenthesis_values$Bracket.class
+/Recursive_Study2504.class
+/Recursive_Study.class
+/Parenthesis_values2504$Bracket.class
+/Parenthesis_values2504.class
