--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,26 +1,2 @@
-/Sum_of_Numbers11720.class
-/Average1546.class
-/Interval_Sum11659.class
-/Interval_Sum2_11660.class
-/Remainder_of_Sum10986.class
-/Sum_of_consecutive_natural_numbers2018.class
-/Jumon_Command1940.class
-/Get_a_good_number1253.class
-/DNAPassword12891.class
-/Lowest_value11003.class
-/Lowest_value11003$Node.class
-/Sorting_numbers2750.class
-/Stack_sequence1874.class
-/Large_numbers17298.class
-/CardGame2164.class
-/CardGame2164$1.class
-/Absolute_value_heap.class
-/Absolute_value_heap11286.class
-/Absolute_value_heap11286$1.class
-/Parenthesis_values$bracket.class
-/Parenthesis_values$brackets.class
-/Parenthesis_values$Bracket.class
-/Recursive_Study2504.class
-/Recursive_Study.class
-/Parenthesis_values2504$Bracket.class
-/Parenthesis_values2504.class
+/Main.class
+/Starring2447.class
