--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,3 +3,9 @@
 /Fibonacci_sequences.class
 /Fibonacci_sequences870.class
 /Fibonacci_sequences10870.class
+/Example.class
+/Sorting_numbers.class
+/Bubble_sort_program.class
+/Sorting_numbers_2750.class
+/mDaba.class
+/mData.class
